<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin">

    <AutoCompleteTextView
        android:id="@+id/auto_complete_text_view_convenio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/convenio_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_text_convenio_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_complete_text_view_convenio"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/convenio_number"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/radio_button_convenio_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:layout_below="@+id/edit_text_convenio_register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radio_button_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/titular" />

        <RadioButton
            android:id="@+id/radio_button_dependente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dependente" />
    </RadioGroup>

</RelativeLayout>