<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin">

    <EditText
        android:id="@+id/edit_text_convenio_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_complete_text_view_convenio"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/convenio_number"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/radio_button_convenio_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_convenio_register"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/titular" />

        <RadioButton
            android:id="@+id/radio_button_dependente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dependente" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/radio_button_convenio_type">     

        <Button
            android:id="@+id/btn_save"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/salve_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/colorAccent"
            android:text="@string/cancel_button"
            android:textColor="@color/white" />
            
    </LinearLayout>

</RelativeLayout>