<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.buscadoctor.android.activity.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_margin"
        android:layout_below="@+id/app_bar_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_full_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/full_name"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_nome">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_senha"
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_genre">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_email">

            <EditText
                android:id="@+id/edit_text_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:hint="@string/cellphone"
                android:inputType="phone"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_telefone">

            <EditText
                android:id="@+id/edit_text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:hint="@string/birthday"
                android:inputType="date"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_birthday"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>