<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.buscadoctor.android.activity.SearchActivity"
    tools:showIn="@layout/activity_search">

    <RelativeLayout
        android:id="@+id/relative_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/very_light_green"
        android:padding="@dimen/normal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_especialidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin">

            <EditText
                android:id="@+id/edit_text_especialidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/especialidade"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_especialidade"
            android:layout_marginTop="@dimen/normal_margin"
            android:visibility="gone">

            <EditText
                android:id="@+id/edit_text_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/data"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_especialidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_aply"
            android:layout_below="@+id/text_input_layout_data" />

        <Button
            android:id="@+id/button_aply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/search_button_selector"
            android:text="@string/aplicar"
            android:textColor="@color/white" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_especialista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_margin"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relative_layout_empty_especialista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_especcialista"
            android:textColor="@color/black" />

    </RelativeLayout>

</RelativeLayout>